--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="profit">
+                    <div class="profit v">
                         <div class="profit-container">
                             <div class="tables-profit">
                                 <h2 class="table-header h2">Почему именно мы должны вести ваш бухгалтерский учет:</h2>
@@ -811,43 +811,43 @@
                                         <tr>
                                             <th>Наименоване затрат</th>
                                             <th>
-                                                Клиент сам ведет бухгалтерию
+                                                Вы сами ведете бухгалтерию
                                             </th>
                                             <th>
                                                 Мы ведем вашу бухгалтерию
                                             </th>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">Программа 1С 8 ПРОФ</td>
+                                            <td>Программа 1С 8 ПРОФ</td>
                                             <td>1100</td>
-                                            <td rowspan="6" style="font-weight:bold">20858.00</td>
+                                            <td rowspan="6" style="font-weight:bold"><p style="font-weight:bold; font-size: 30px;">20858.00</p></td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">1С-Отчетность</td>
+                                            <td>1С-Отчетность</td>
                                             <td>200</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">Консультации по телефону 2 ч.</td>
+                                            <td>Консультации по телефону 2 ч.</td>
                                             <td>4000</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">Заработная плата бухгалтера</td>
+                                            <td>Заработная плата бухгалтера</td>
                                             <td>25000</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">Обновление программы</td>
+                                            <td>Обновление программы</td>
                                             <td>2800</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold">Итог</td>
-                                            <td>33100</td>
+                                            <td><p style="color: red; font-weight:bold; font-size: 20px;">ИТОГ</p></td>
+                                            <td><p style="font-weight:bold; font-size: 20px; color: red;">33100</p></td>
                                         </tr>
                                 </table>
                                 <p class="table-text-bold">Выгода очевидна...</p>
                             </div>
                         </div>
-                    </div>-->
-                    <div class="reviews v" id="reviews-anchor">
+                    </div>
+                    <div class="reviews" id="reviews-anchor">
                         <h2 class="h2">Отзывы</h2>
                         <div class="reviews-container">
                             <div class="itc-slider" data-slider="itc-slider" data-autoplay="true">
@@ -870,7 +870,7 @@
                                                 <p class="slider-content-text">"Специалисты компании отзывчивые и компетентные сотрудники с опытом работы. Всегда оказывают помощь по любому вопросу, касающемуся бухгалтерии, сдачи отчетности, да и в целом по бухгалтерскому обслуживанию."</p>
                                             </div>
                                             <div class="slider-text-name">ООО "ПИТ СТОП"</div>
-                                            <div class="slider-job">Замеситель по особо важным делам</div>
+                                            <div class="slider-job">Шины и диски</div>
                                             <div class="img-position">
                                                 <div class="slider-img">
                                                     <img src="./img/primer1.png" class="slider-img-circle">
