fixes small updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="info-container-top-text">
-                        <p class="additional-text mrgn10">8:30 – 17:30 (MSK)</p>
+                        <p class="additional-text mrgn10">8:30 – 17:30 (МСК)</p>
                         <p class="bold">8 921 716-88-99</p>
                     </div>
                 </div>
@@ -209,10 +209,10 @@
                                     "Комплексный"
                                 </div>
                                 <div class="tariffs-blocks-text">
-                                    Аутсорсер сам заводит все документы в программу и сам сдает отчетность. Клиент предоставляет только первичные документы.
+                                    Мы сами заводим все документы в программу и сдаём отчетность. Вы предоставляете только первичные документы.
                                 </div>
                                 <div class="tariffs-blocks-price">
-                                    от <b>1130р</b>
+                                    от <b>1 130 ₽</b>
                                 </div>
                                 <button class="tariffs-blocks-button" onclick="opn(this)" id="0">Подробнее</button>
                                 <!-- The Modal -->
@@ -511,10 +511,10 @@
                                     "Отчетность"
                                 </div>
                                 <div class="tariffs-blocks-text">
-                                    Клиент сам заносит все документы в программу. Аутсорсер контролирует и сдает отчетность.
+                                    Вы сами заносите все документы в программу. Мы контролируем и сдаем отчетность.
                                 </div>
                                 <div class="tariffs-blocks-price">
-                                    от <b>1958р</b>
+                                    от <b>1 958 ₽</b>
                                 </div>
                                 <button class="tariffs-blocks-button" onclick="opn(this)" id="1">Подробнее</button>
                                 <!-- The Modal -->
@@ -647,10 +647,10 @@
                                     "Нулевая отчетность"
                                 </div>
                                 <div class="tariffs-blocks-text three">
-                                    Аутсорсер  сдает отчетность.
+                                    Мы сдаём отчетность.
                                 </div>
                                 <div class="tariffs-blocks-price">
-                                    от <b>450р</b>
+                                    от <b>450 ₽</b>
                                 </div>
                                 <button class="tariffs-blocks-button" onclick="opn(this)" id="2">Подробнее</button>
                                 <!-- The Modal -->
@@ -819,8 +819,8 @@
                                         </tr>
                                         <tr>
                                             <td>Программа 1С 8 ПРОФ</td>
-                                            <td>1100</td>
-                                            <td rowspan="6" style="font-weight:bold"><p style="font-weight:bold; font-size: 30px;">20858.00</p></td>
+                                            <td>1 100</td>
+                                            <td rowspan="6" style="font-weight:bold"><p style="font-weight:bold; font-size: 30px;">20 858 ₽</p></td>
                                         </tr>
                                         <tr>
                                             <td>1С-Отчетность</td>
@@ -828,19 +828,19 @@
                                         </tr>
                                         <tr>
                                             <td>Консультации по телефону 2 ч.</td>
-                                            <td>4000</td>
+                                            <td>4 000</td>
                                         </tr>
                                         <tr>
                                             <td>Заработная плата бухгалтера</td>
-                                            <td>25000</td>
+                                            <td>25 000</td>
                                         </tr>
                                         <tr>
                                             <td>Обновление программы</td>
-                                            <td>2800</td>
+                                            <td>2 800</td>
                                         </tr>
                                         <tr>
                                             <td style="background-color: #ffde41;"><p style="color: red; font-weight:bold; font-size: 20px;">ИТОГ</p></td>
-                                            <td style="background-color: #ffde41;"><p style="font-weight:bold; font-size: 20px; color: red;">33100</p></td>
+                                            <td style="background-color: #ffde41;"><p style="font-weight:bold; font-size: 20px; color: red;">33 100 ₽</p></td>
                                         </tr>
                                 </table>
                                 <p class="table-text-bold">Выгода очевидна...</p>
