--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                                 <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="img-algoritm">
                             </div>
                         </div>-->
-                        <div class="">ООО "АлгорИТм"</div>
+                        <div class="footer-header">ООО "АлгорИТм"</div>
                         <div class="footer-email">opt@algoritm35.ru</div>
                         <div class="footer-adress">Адрес: г. Вологда, ул Костромская, 7</div>
                         <div class="footer-telephone">Телефон: 8 921 716-88-99</div>
