--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                                         <tr>
                                             <td>Программа 1С 8 ПРОФ</td>
                                             <td>1 100</td>
-                                            <td rowspan="6" style="font-weight:bold"><p style="font-weight:bold; font-size: 30px;">20 858 ₽</p></td>
+                                            <td rowspan="6" style="font-weight:bold"><p style="font-weight:bold; font-size: 30px; position: relative; top: 60px;">20 858 ₽</p><img src="./img/RedCircle2.png" alt="" style="position: relative; height: 130px; top: -25px; left: 30px;"><img src="./img/checked.png" alt="" style="position: relative; height: 50px; top: -100px; left: -10px;"></td>
                                         </tr>
                                         <tr>
                                             <td>1С-Отчетность</td>
