update_photo_size
Изменил размер фотографий и иконок

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="logo-container">
           <div class="1c-logo">
             <img
-              src="./img/logo/red_on_white_sized_3.png"
+              src="./img/logo/red_on_white_sized_3-update.png"
               alt="Логитип 1с"
               class="img-1c"
             />
           </div>
           <div class="algotitm-logo">
             <img
-              src="./img/algoritmlogored.png"
+              src="./img/logo/algoritmlogored-update.png"
               alt="Логитип АлгорИТм"
               class="img-algoritm"
             />
@@ -34,14 +34,14 @@
           <div class="info-container-top-logo-container">
             <div class="1c-logo">
               <img
-                src="./img/logo/red_on_white_sized_3.png"
+                src="./img/logo/red_on_white_sized_3-update.png"
                 alt="Логитип 1с"
                 class="img-1c"
               />
             </div>
             <div class="algotitm-logo">
               <img
-                src="./img/algoritmlogored.png"
+                src="./img/logo/algoritmlogored-update.png"
                 alt="Логитип АлгорИТм"
                 class="img-algoritm"
               />
@@ -210,12 +210,16 @@
               <h2 class="h2 v">Гарантируем</h2>
               <div class="block-container">
                 <div class="block">
-                  <img src="./img/quality.png" alt="" class="warranty-img" />
+                  <img
+                    src="./img/quality-update.png"
+                    alt=""
+                    class="warranty-img"
+                  />
                   <div>Качество работы</div>
                 </div>
                 <div class="block">
                   <img
-                    src="./img/responsibility.png"
+                    src="./img/responsibility-update.png"
                     alt=""
                     class="warranty-img2"
                   />
@@ -225,7 +229,11 @@
                   </div>
                 </div>
                 <div class="block">
-                  <img src="./img/defense.png" alt="" class="warranty-img" />
+                  <img
+                    src="./img/defense-update.png"
+                    alt=""
+                    class="warranty-img"
+                  />
                   <div>Безопасность</div>
                 </div>
               </div>
@@ -243,7 +251,10 @@
                 <div class="benefits-column-first">
                   <div class="risk-reduction">
                     <div class="benefits-img">
-                      <img src="./img/benefits/decline.png" class="risk-img" />
+                      <img
+                        src="./img/benefits/decline-update.png"
+                        class="risk-img"
+                      />
                     </div>
                     <div class="benefits-text">
                       <p class="benefits-text-p">Снижение рисков и затрат</p>
@@ -251,7 +262,10 @@
                   </div>
                   <div class="mobile-app">
                     <div class="benefits-img">
-                      <img src="./img/benefits/mobile.png" class="mobile-img" />
+                      <img
+                        src="./img/benefits/mobile-update.png"
+                        class="mobile-img"
+                      />
                     </div>
                     <div class="benefits-text">
                       <p class="benefits-text-p">Мобильное приложение</p>
@@ -259,7 +273,10 @@
                   </div>
                   <div class="time-saving">
                     <div class="benefits-img">
-                      <img src="./img/benefits/time.png" class="time-img" />
+                      <img
+                        src="./img/benefits/time-update.png"
+                        class="time-img"
+                      />
                     </div>
                     <div class="benefits-text">
                       <p class="benefits-text-p">Экономия времени</p>
@@ -269,7 +286,7 @@
                 <div class="benefits-column-second">
                   <div class="support">
                     <div class="benefits-img">
-                      <img src="./img/benefits/24h.png" class="h-img" />
+                      <img src="./img/benefits/24h-update.png" class="h-img" />
                     </div>
                     <div class="benefits-text">
                       <p class="benefits-text-p">Постоянная поддержка</p>
@@ -278,7 +295,7 @@
                   <div class="quality">
                     <div class="benefits-img">
                       <img
-                        src="./img/benefits/quality2.png"
+                        src="./img/benefits/quality2-update.png"
                         class="quality-img"
                       />
                     </div>
@@ -290,7 +307,10 @@
                   </div>
                   <div class="promotion">
                     <div class="benefits-img">
-                      <img src="./img/benefits/shield.png" class="shield-img" />
+                      <img
+                        src="./img/benefits/shield-update.png"
+                        class="shield-img"
+                      />
                     </div>
                     <div class="benefits-text">
                       <p class="benefits-text-p">
@@ -959,7 +979,7 @@
           <div class="express-audit v" id="audit-anchor">
             <div class="express-audit-container">
               <div class="express-audit-image">
-                <img src="img/Kalkulyator_transp.png" class="audit-img" />
+                <img src="img/girl-update.png" class="audit-img" />
               </div>
               <div class="express-audit-text-container">
                 <h2 class="h2">Экспресс-аудит бухучета</h2>
@@ -971,7 +991,7 @@
                   <button class="audit-order-button" onclick="orderopn(this)">
                     <p class="button-name">Заказать</p>
                     <img
-                      src="img/Resurs_4_4x.png"
+                      src="img/red-free.png"
                       style="
                         position: relative;
                         height: 39px;
@@ -1101,7 +1121,7 @@
                         <button class="doc-btn" onclick="opndoc(this)" id="0">
                           <div class="slider-img">
                             <img
-                              src="./img/document.png"
+                              src="./img/document-update.png"
                               class="slider-img-circle"
                             />
                           </div>
@@ -1124,7 +1144,7 @@
                         <button class="doc-btn" onclick="opndoc(this)" id="1">
                           <div class="slider-img">
                             <img
-                              src="./img/document.png"
+                              src="./img/document-update.png"
                               class="slider-img-circle"
                             />
                           </div>
@@ -1144,7 +1164,7 @@
                   <div class="doc-container">
                     <div class="doc-img-container">
                       <img
-                        src="./img/reviews/review1.jpg"
+                        src="./img/reviews/review1-update.png"
                         alt="Здесь должен присутствовать отзыв"
                         width="100%"
                         height="auto"
@@ -1153,7 +1173,7 @@
                         id="0"
                       />
                       <img
-                        src="./img/reviews/review2.jpg"
+                        src="./img/reviews/review2-update.png"
                         alt="Здесь должен присутствовать отзыв"
                         width="100%"
                         height="auto"
