--- a/index.html
+++ b/index.html
@@ -931,14 +931,7 @@
                   <td>Программа 1С 8 ПРОФ</td>
                   <td>1 100</td>
                   <td rowspan="6" style="font-weight: bold">
-                    <p style="
-                          font-weight: bold;
-                          font-size: 30px;
-                          position: relative;
-                          top: 60px;
-                        ">
-                      20 858 ₽
-                    </p>
+                    <p class="profit-payment">20 858 ₽</p>
                     <img src="./img/red_kryg_galka.png" alt="" class="kryg-galka"/>
                   </td>
                 </tr>
@@ -960,12 +953,12 @@
                 </tr>
                 <tr>
                   <td style="background-color: #ffde41">
-                    <p style="color: red; font-weight: bold; font-size: 20px">
+                    <p class="table-result">
                       ИТОГ
                     </p>
                   </td>
                   <td style="background-color: #ffde41">
-                    <p style="font-weight: bold; font-size: 20px; color: red">
+                    <p class="table-result">
                       33 100 ₽
                     </p>
                   </td>
@@ -1065,7 +1058,7 @@
             </div>
             <div class="twoside-container">
               <div class="about-our-company-left">
-                <p class="bold" style="font-size: 20px; padding-left: 10px">
+                <p class="bold twoside-container-header">
                   А еще мы занимаемся:
                 </p>
                 <br />
@@ -1078,7 +1071,7 @@
                 </ul>
               </div>
               <div class="about-our-company-right">
-                <p class="bold" style="font-size: 20px; padding-left: 10px">
+                <p class="bold twoside-container-header">
                   Продаем и ремонтируем:
                 </p>
                 <br />
