--- a/index.html
+++ b/index.html
@@ -1026,9 +1026,9 @@
               <div class="doc-content">
                 <div class="doc-container">
                   <div class="doc-img-container">
-                    <img src="./img/reviews/review1-update.jpg" alt="Здесь должен присутствовать отзыв" width="100%"
+                    <img src="./img/reviews/review1-update.png" alt="Здесь должен присутствовать отзыв" width="100%"
                       height="auto" class="doc-image" style="display: none" id="0" />
-                    <img src="./img/reviews/review2-update.jpg" alt="Здесь должен присутствовать отзыв" width="100%"
+                    <img src="./img/reviews/review2-update.png" alt="Здесь должен присутствовать отзыв" width="100%"
                       height="auto" class="doc-image" style="display: none" id="1" />
                   </div>
                 </div>
