--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                 Индивидуальный предприниматель с сотрудниками
                               </caption>
                               <tr>
-                                <th>Система налогооблажения</th>
+                                <th>Налоговая система</th>
                                 <th>Количество документов</th>
                                 <th>Количество сотрудников</th>
                                 <th>Стоимость в месяц руб.</th>
@@ -477,7 +477,7 @@
                                 Индивидуальный предприниматель без сотрудников
                               </caption>
                               <tr>
-                                <th>Система налогооблажения</th>
+                                <th>Налоговая система</th>
                                 <th>Количество документов</th>
                                 <th>Стоимость в месяц руб.</th>
                               </tr>
@@ -578,7 +578,7 @@
                           <div class="tables-ooo-container-tarif-complex">
                             <table border="1" cellspacing="0">
                               <tr>
-                                <th>Система налогооблажения</th>
+                                <th>Налоговая система</th>
                                 <th>Количество документов</th>
                                 <th>Количество сотрудников</th>
                                 <th>Стоимость в месяц руб.</th>
@@ -703,7 +703,7 @@
                         <div class="tables-ip-container-tarif-reporting">
                           <table border="1" cellspacing="0">
                             <tr>
-                              <th>Система налогооблажения</th>
+                              <th>Налоговая система</th>
                               <th>ИП с работниками. Стоимость в месяц</th>
                               <th>ИП без работников. Стоимость в месяц</th>
                             </tr>
@@ -768,7 +768,7 @@
                         <div class="tables-ooo-container-tarif-reporting">
                           <table border="1" cellspacing="0">
                             <tr>
-                              <th>Система налогооблажения</th>
+                              <th>Налоговая система</th>
                               <th>ООО с работниками. Стоимость в месяц</th>
                             </tr>
                             <tr>
@@ -856,7 +856,7 @@
                         <div class="tables-ip-container-tarif-zero-reporting">
                           <table border="1" cellspacing="0">
                             <tr>
-                              <th>Система налогооблажения</th>
+                              <th>Налоговая система</th>
                               <th>ИП с работниками. Стоимость в месяц</th>
                               <th>ИП без работников. Стоимость в месяц</th>
                             </tr>
@@ -921,7 +921,7 @@
                         <div class="tables-ooo-container-tarif-zero-reporting">
                           <table border="1" cellspacing="0">
                             <tr>
-                              <th>Система налогооблажения</th>
+                              <th>Налоговая система</th>
                               <th>ООО с работниками. Стоимость в месяц</th>
                             </tr>
                             <tr>
