--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/itc-slider.css" />
-    <link rel="shortcut icon" href="./img/logo/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/png" />
     <script src="./itc-slider.js" defer></script>
     <title>Главная страница</title>
   </head>
